k8s/manifests-aa2a66/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-aa2a66
  namespace: journee
  labels:
    app: journee-aa2a66
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-aa2a66
  template:
    metadata:
      labels:
        app: journee-aa2a66
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-aa2a66
          image: gcr.io/my-docker-471807/journee:v7.1.0
          ports:
            - containerPort: 3000
