k8s/manifests-aa2a66/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-aa2a66
  namespace: journee
spec:
  selector:
    app: journee-aa2a66
  ports:
    - port: 80
      targetPort: 3000
